--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,9 @@
         android:theme="@style/Theme.Ifood"
         tools:targetApi="31">
         <activity
+            android:name=".activity.ConfiguracoesUsuarioActivity"
+            android:exported="false" />
+        <activity
             android:name=".activity.EmpresaActivity"
             android:exported="false" />
         <activity
@@ -24,17 +27,22 @@
             android:exported="false" />
         <activity
             android:name=".activity.SplashActivity"
-            android:exported="true"/>
-        <activity android:name=".activity.ConfiguracoesEmpresaActivity"
-            android:parentActivityName=".activity.EmpresaActivity"/>
-        <activity android:name=".activity.NovoProdutoEmpresaActivity"
-            android:parentActivityName=".activity.EmpresaActivity"
-            android:exported="true">
+            android:exported="true" >
+
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity
+            android:name=".activity.ConfiguracoesEmpresaActivity"
+            android:parentActivityName=".activity.EmpresaActivity" />
+        <activity
+            android:name=".activity.NovoProdutoEmpresaActivity"
+            android:exported="false"
+            android:parentActivityName=".activity.EmpresaActivity">
+
         </activity>
     </application>
 
