--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,8 @@
         tools:targetApi="31">
         <activity
             android:name=".activity.ConfiguracoesUsuarioActivity"
-            android:exported="false" />
+            android:exported="false"
+            android:parentActivityName=".activity.HomeActivity"/>
         <activity
             android:name=".activity.EmpresaActivity"
             android:exported="false" />
@@ -44,6 +45,7 @@
             android:parentActivityName=".activity.EmpresaActivity">
 
         </activity>
+
     </application>
 
 </manifest>
