--- a/app/build.gradle
+++ b/app/build.gradle
@@ -63,6 +63,7 @@ dependencies {
     implementation 'com.squareup.picasso:picasso:2.71828'
 
     //Dependência dialog de progresso
+    implementation 'com.github.d-max:spots-dialog:0.7'
 
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'io.gitlab.alexto9090:materialsearchview:1.0.0'
