--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,9 +14,13 @@
         android:theme="@style/Theme.Ifood"
         tools:targetApi="31">
         <activity
-            android:name=".activity.CardapioActivity"
-            android:parentActivityName=".activity.HomeActivity"
+            android:name=".activity.PedidosActivity"
+            android:parentActivityName=".activity.EmpresaActivity"
             android:exported="false" />
+        <activity
+            android:name=".activity.CardapioActivity"
+            android:exported="false"
+            android:parentActivityName=".activity.HomeActivity" />
         <activity
             android:name=".activity.ConfiguracoesUsuarioActivity"
             android:exported="false"
@@ -45,7 +49,7 @@
         <activity
             android:name=".activity.NovoProdutoEmpresaActivity"
             android:exported="false"
-            android:parentActivityName=".activity.EmpresaActivity"></activity>
+            android:parentActivityName=".activity.EmpresaActivity" />
     </application>
 
 </manifest>
